# EmbeddingsWithPinecone

./: README.md  app.py  main.ipynb  pyproject.toml  requirements.txt
