[tool.poetry]
name = "embeddingswithpinecone"
version = "0.1.0"
description = ""
authors = ["ethanlchristensen <ethanlchristensen@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
scikit-learn = "^1.4.0"
openai = "^1.10.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
pinecone-client = "^3.0.2"
python-dotenv = "^1.0.1"
langchain = "^0.1.4"
tiktoken = "^0.5.2"
streamlit = "^1.30.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
